--- a/proyecto2/tienda.html
+++ b/proyecto2/tienda.html
@@ -17,7 +17,7 @@
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i class="fa-solid fa-bolt-lightning"></i> Electric Shop</a>
+            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Electric Shop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                             <li><a class="dropdown-item" href="sobreNosotrosProyecto.html">Proyecto</a></li>
-                            <li><a class="dropdown-item" href="#">Equipo</a></li>
+                            <li><button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Equipo
+                            </button></li>
                             <!-- <li>
                                 <hr class="dropdown-divider">
                             </li> -->
@@ -216,6 +218,24 @@
             </div>
         </div>
     </footer>
+
+     <!-- Modal -->
+     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Error</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Página en construcción.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
