--- a/proyecto2/sobreNosotrosProyecto.html
+++ b/proyecto2/sobreNosotrosProyecto.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="css/SNProyecto.css">
 </head>
 
-<body>
+<body >
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i class="fa-solid fa-bolt-lightning"></i> Electric Shop</a>
+            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Electric Shop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                             <li><a class="dropdown-item" href="#">Proyecto</a></li>
-                            <li><a class="dropdown-item" href="#">Equipo</a></li>
+                            <li><button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Equipo
+                            </button></li>
                         </ul>
                     </li>
                     <li class="nav-item active">
@@ -95,7 +97,7 @@
                             vitae eveniet libero reprehenderit, incidunt voluptate assumenda quae vel qui. Corporis
                             provident
                             nostrum tempore temporibus dolorem, aut impedit eaque.</p>
-                            <p class="text-center"><a href="#"><i class="fa-solid fa-arrow-up"></i></a> </p>
+                            <p class="text-center"><a href="#"><i class="text-dark fa-solid fa-arrow-up"></i></a> </p>
                         <h4 id="list-item-2">Tienda </h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius libero quaerat id sed
                             nesciunt,
@@ -132,7 +134,7 @@
                             Veniam quae inventore maxime atque, saepe quo dolorum accusamus hic, consequuntur excepturi
                             voluptatum
                             nam, fuga in.</p>
-                            <p class="text-center"><a href="#"><i class="fa-solid fa-arrow-up"></i></a> </p>
+                            <p class="text-center"><a href="#"><i class="text-dark fa-solid fa-arrow-up"></i></a> </p>
                         <h4 id="list-item-3">Contacto</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aspernatur commodi odit,
                             quaerat
@@ -163,7 +165,7 @@
                             aliquid? Error possimus impedit ullam atque, temporibus quod distinctio, inventore provident
                             quibusdam
                             cum fuga expedita saepe nihil magnam sint voluptatem. Nulla ratione repellat blanditiis.</p>
-                            <p class="text-center"><a href="#"><i class="fa-solid fa-arrow-up"></i></a> </p>
+                            <p class="text-center"><a href="#"><i class="text-dark fa-solid fa-arrow-up"></i></a> </p>
                         <h4 id="list-item-4">Acceso / Registro</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem blanditiis iste molestias
                             at
@@ -199,7 +201,7 @@
                             sed magni! Saepe reiciendis perspiciatis aliquid officia earum mollitia voluptates maxime
                             illum
                             at.</p>
-                            <p class="text-center"><a href="#"><i class="fa-solid fa-arrow-up"></i></a></p>
+                            <p class="text-center"><a href="#"><i class="text-dark fa-solid fa-arrow-up"></i></a></p>
                     </div>
                 </div>
             </div>
@@ -227,6 +229,24 @@
             </div>
         </div>
     </footer>
+
+     <!-- Modal -->
+     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Error</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Página en construcción.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
