--- a/proyecto2/login.html
+++ b/proyecto2/login.html
@@ -71,7 +71,7 @@
                     <div class="container">
                         <div class="row ">
                             <div class="col-12 d-flex justify-content-center align-items-center text-center">
-                                <form class="w-75 bg-warning d-flex flex-column  align-items-center">
+                                <form class="formulario w-75 bg-warning d-flex flex-column  align-items-center">
                                     <div class="my-3 d-flex flex-column align-items-center">
                                       <label for="exampleInputEmail1" class="form-label">Email o Nombre de Usuario</label>
                                       <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
@@ -103,7 +103,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 d-flex justify-content-center align-items-center text-center">
-                                <form class="w-75 bg-warning d-flex flex-column align-items-center">
+                                <form class="formulario w-75 bg-warning d-flex flex-column align-items-center">
                                     <div class="my-3 d-flex flex-column align-items-center">
                                         <label for="exampleInputName" class="form-label">Nombre Completo</label>
                                         <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp">
