--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -15,7 +15,8 @@
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Electric Shop</a>
+            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Imedexsa de
+                hacendado</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -156,7 +157,7 @@
 
     <!-- Footer -->
 
-    <footer class="bg-dark text-light py-3 d-flex justify-content-around">
+    <footer class="bg-dark text-light py-3 d-flex flex-wrap justify-content-center">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-4">
@@ -165,10 +166,10 @@
                     <p><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</p>
                 </div>
 
-                <div class="col-12 col-md-4"> 2019 - Todos los derechos reservados - <i
+                <div class="col-12 col-md-4 "> 2019 - Todos los derechos reservados - <i
                         class="fa-regular fa-registered"></i></div>
 
-                <div class="col-12 col-md-4 text-center">
+                <div class="col-12 col-md-4 text-center d-flex justify-content-end gap-3">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
@@ -195,6 +196,7 @@
         </div>
     </div>
 
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -202,5 +204,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
     crossorigin="anonymous"></script>
+
 
 </html>
