--- a/proyecto2/tienda.html
+++ b/proyecto2/tienda.html
@@ -35,15 +35,15 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                             <li><a class="dropdown-item" href="sobreNosotrosProyecto.html">Proyecto</a></li>
                             <li><button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                Equipo
-                            </button></li>
+                                    Equipo
+                                </button></li>
                             <!-- <li>
                                 <hr class="dropdown-divider">
                             </li> -->
                         </ul>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="tienda.html">Tienda</a>
+                        <a class="nav-link" href="#">Tienda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html" tabindex="-1">Contacto</a>
@@ -60,7 +60,7 @@
                         </a>
                     </li>
                 </ul>
-                
+
                 <form class="d-flex">
                     <input class="form-control me-2 w-auto" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn btn-outline-light" type="submit"><i
@@ -132,7 +132,7 @@
                                     aria-atomic="true">
                                     <div class="toast-header">
                                         <strong class="me-auto">Añadido correctamente</strong>
-                                        <small>11 mins ago</small>
+                                        <small>Now</small>
                                         <button type="button" class="btn-close" data-bs-dismiss="toast"
                                             aria-label="Close"></button>
                                     </div>
@@ -184,16 +184,15 @@
             <div class="offcanvas-body">
                 <!-- Contenido del Carrito de Compras -->
                 <p>Tu carrito está vacío.</p>
-                <div class="alert alert-warning alert-dismissible fade show" role="alert" id="cartAlert2">
-                    Tiene notificaciones sin consultar.
+                <div class="alert alert-warning alert-dismissible fade show" role="alert" id="cartAlert">
+                    Tiene ofertas sin consultar.
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     <i class="fa-solid fa-arrow-down"></i>
                 </div>
             </div>
             <button type="button" class="btn btn-primary">
-                Notifications <span class="badge bg-secondary">4</span>
+                Ofertas <span class="badge bg-secondary">4</span>
             </button>
-
         </div>
     </main>
 
@@ -208,8 +207,9 @@
                     <p><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</p>
                 </div>
 
-                <div class="col-12 col-md-4"> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i></div>
-                
+                <div class="col-12 col-md-4"> 2019 - Todos los derechos reservados - <i
+                        class="fa-regular fa-registered"></i></div>
+
                 <div class="col-12 col-md-4 text-center">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
@@ -219,8 +219,8 @@
         </div>
     </footer>
 
-     <!-- Modal -->
-     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -238,8 +238,12 @@
     </div>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 <script>
     // Script para mostrar el toast
     var liveToast1 = new bootstrap.Toast(document.getElementById('liveToast'));
