--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -15,8 +15,7 @@
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Imedexsa de
-                hacendado</a>
+            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Elex</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -109,7 +108,7 @@
 
         <section class="row p-4 fs-4 bg-white">
             <div class="col-12">
-                <h2 class="fa-3x">Profesionales eléctricos a su servicio</h2>
+                <h2 class="fa-3x">Electricidad Extremadura - Profesionales eléctricos a su servicio</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, animi illum? Asperiores veniam quas
                     perferendis. Aperiam molestias repellendus quas harum dicta libero modi corrupti numquam fugiat
                     explicabo cupiditate, inventore, earum ipsam, dignissimos optio consequuntur debitis nihil beatae
@@ -156,27 +155,20 @@
     </div>
 
     <!-- Footer -->
-
-    <footer class="bg-dark text-light py-3 d-flex flex-wrap justify-content-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <p><i class="fa-solid fa-envelope"></i> info@electricshop.com</p>
-                    <p><i class="fa-solid fa-phone"></i> +123 456 789</p>
-                    <p><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</p>
-                </div>
-
-                <div class="col-12 col-md-4 "> 2019 - Todos los derechos reservados - <i
-                        class="fa-regular fa-registered"></i></div>
-
-                <div class="col-12 col-md-4 text-center d-flex justify-content-end gap-3">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                </div>
-            </div>
-        </div>
+    <footer class="py-3 mt-4 bg-dark">
+        <ul class="nav justify-content-around border-bottom pb-3 mb-3 text-light m-3">
+            <li class="nav-item"><i class="fa-solid fa-envelope"></i> info@electricshop.com</li>
+            <li class="nav-item"><i class="fa-solid fa-phone"></i> +123 456 789</li>
+            <li class="nav-item"><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</li>
+            <li class="nav-item"> <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </li>
+        </ul>
+        <p class="text-center text-muted">2024 - Todos los derechos reservados - <i
+                class="fa-regular fa-registered"></i></p>
     </footer>
+
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
