--- a/proyecto2/tienda.html
+++ b/proyecto2/tienda.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda-Proyecto</title>
+    <title>Tienda-Elex</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/9cfe8b4c32.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Electric Shop</a>
+            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Elex</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -117,8 +117,8 @@
             <div class="row">
                 <!-- Producto 1 -->
                 <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="imagenes/placaBase.jpg" class="card-img-top" alt="Producto 1">
+                    <div class="card h-100">
+                        <img src="imagenes/material-electrico-350x225.jpg" class="card-img-top" alt="Producto 1">
                         <div class="card-body">
                             <h5 class="card-title">Producto 1</h5>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi unde
@@ -146,8 +146,8 @@
                 </div>
                 <!-- Producto 2 -->
                 <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="imagenes/ssd-removebg-preview.png" class="card-img-top" alt="Producto 2">
+                    <div class="card h-100">
+                        <img src="imagenes/CABLES-Y-MANGUERAS.jpg" class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title">Producto 2</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ab omnis
@@ -172,7 +172,40 @@
                         </div>
                     </div>
                 </div>
+                <!-- Producto 3 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class=" card-img-top">
+                            <div class="spinner-border d-flex justify-content-center my-5 mx-auto" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Producto 3</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit similique quod unde minus? Eligendi deleniti dolorem quisquam vel excepturi maiores.</p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="toast"
+                                data-bs-target="#liveToast3" id="liveToastBtn3">Añadir al carrito</button>
+
+                            <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+                                <div id="liveToast3" class="toast hide" role="alert" aria-live="assertive"
+                                    aria-atomic="true">
+                                    <div class="toast-header">
+                                        <strong class="me-auto">Añadido correctamente</strong>
+                                        <small>Now</small>
+                                        <button type="button" class="btn-close" data-bs-dismiss="toast"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="toast-body">
+                                        El Producto 3 ha sido añadido al carrito.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+        </div>
         </div>
         <!-- Carrito de Compras Sidebar -->
         <div class="offcanvas offcanvas-end" tabindex="-1" id="cartSidebar" aria-labelledby="cartSidebarLabel">
@@ -198,25 +231,18 @@
 
     <!-- Footer -->
 
-    <footer class="bg-dark text-light py-3 d-flex justify-content-around">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <p><i class="fa-solid fa-envelope"></i> info@electricshop.com</p>
-                    <p><i class="fa-solid fa-phone"></i> +123 456 789</p>
-                    <p><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</p>
-                </div>
-
-                <div class="col-12 col-md-4"> 2019 - Todos los derechos reservados - <i
-                        class="fa-regular fa-registered"></i></div>
-
-                <div class="col-12 col-md-4 text-center">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                </div>
-            </div>
-        </div>
+    <footer class="py-3 mt-4 bg-dark">
+        <ul class="nav justify-content-around border-bottom pb-3 mb-3 text-light m-3">
+            <li class="nav-item"><i class="fa-solid fa-envelope"></i> info@electricshop.com</li>
+            <li class="nav-item"><i class="fa-solid fa-phone"></i> +123 456 789</li>
+            <li class="nav-item"><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</li>
+            <li class="nav-item"> <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </li>
+        </ul>
+        <p class="text-center text-muted">2024 - Todos los derechos reservados - <i
+                class="fa-regular fa-registered"></i></p>
     </footer>
 
     <!-- Modal -->
@@ -254,6 +280,11 @@
     var liveToast2 = new bootstrap.Toast(document.getElementById('liveToast2'));
     document.getElementById('liveToastBtn2').addEventListener('click', function () {
         liveToast2.show();
+    });
+
+    var liveToast3 = new bootstrap.Toast(document.getElementById('liveToast3'));
+    document.getElementById('liveToastBtn3').addEventListener('click', function () {
+        liveToast3.show();
     });
 </script>
 
