--- a/proyecto2/contacto.html
+++ b/proyecto2/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Electric Shop</title>
+    <title>Contacto - Elex</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/9cfe8b4c32.js" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Electric Shop</a>
+            <a class="navbar-brand" href="#"><i class="text-warning fa-solid fa-bolt-lightning"></i> Elex</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,23 +34,24 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                             <li><a class="dropdown-item" href="sobreNosotrosProyecto.html">Proyecto</a></li>
                             <li><button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                Equipo
-                            </button></li>
+                                    Equipo
+                                </button></li>
                         </ul>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="tienda.html">Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" >Contacto</a>
+                        <a class="nav-link" href="#" tabindex="-1">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html" tabindex="-1" >Acceso / Registro de Cuenta</a>
+                        <a class="nav-link" href="login.html" tabindex="-1">Acceso / Registro de Cuenta</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2 w-auto" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button class="btn btn-outline-light" type="submit"><i
+                            class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
             </div>
         </div>
@@ -76,7 +77,7 @@
                             <textarea class="form-control" id="mensaje" rows="5" placeholder="Tu mensaje"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
-                        
+
                     </form>
                 </div>
                 <div class="col-md-6">
@@ -91,28 +92,23 @@
 
     <!-- Footer -->
 
-    <footer class="bg-dark text-light py-3 d-flex justify-content-around">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <p><i class="fa-solid fa-envelope"></i> info@electricshop.com</p>
-                    <p><i class="fa-solid fa-phone"></i> +123 456 789</p>
-                    <p><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</p>
-                </div>
-
-                <div class="col-12 col-md-4"> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i></div>
-                
-                <div class="col-12 col-md-4 text-center">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                </div>
-            </div>
-        </div>
+    <!-- Footer -->
+    <footer class="py-3 mt-4 bg-dark">
+        <ul class="nav justify-content-around border-bottom pb-3 mb-3 text-light m-3">
+            <li class="nav-item"><i class="fa-solid fa-envelope"></i> info@electricshop.com</li>
+            <li class="nav-item"><i class="fa-solid fa-phone"></i> +123 456 789</li>
+            <li class="nav-item"><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</li>
+            <li class="nav-item"> <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </li>
+        </ul>
+        <p class="text-center text-muted">2024 - Todos los derechos reservados - <i
+                class="fa-regular fa-registered"></i></p>
     </footer>
 
-     <!-- Modal -->
-     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -130,8 +126,12 @@
     </div>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 
 
 
