--- a/proyecto2/contacto.html
+++ b/proyecto2/contacto.html
@@ -91,16 +91,15 @@
     </main>
 
     <!-- Footer -->
-
-    <!-- Footer -->
     <footer class="py-3 mt-4 bg-dark">
-        <ul class="nav justify-content-around border-bottom pb-3 mb-3 text-light m-3">
+        <ul class="nav justify-content-around border-bottom pb-4 mb-3 text-light m-3">
             <li class="nav-item"><i class="fa-solid fa-envelope"></i> info@electricshop.com</li>
             <li class="nav-item"><i class="fa-solid fa-phone"></i> +123 456 789</li>
             <li class="nav-item"><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</li>
-            <li class="nav-item"> <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
+            <li class="nav-item"> 
+                <a href="https://www.facebook.com/?locale=es_ES"><i class="fa-brands fa-facebook text-light"></i></a>
+                <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter text-light"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram text-light"></i></a>
             </li>
         </ul>
         <p class="text-center text-muted">2024 - Todos los derechos reservados - <i
