--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -8,9 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/9cfe8b4c32.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body style="background-color: lightgray;">
+<body>
 
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -125,44 +126,36 @@
                 <i class="fa-regular fa-lightbulb rounded-circle bg-dark d-flex align-items-center justify-content-center  fa-3x mx-auto text-white mb-3"
                     style="width: 180px; height:180px;"></i>
                 <h2 class="text-center">Iluminación</h2>
-                <p style="text-align: justify;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur
-                    ullam nobis obcaecati, perspiciatis iure laboriosam eveniet quasi eligendi, error tempore
-                    reprehenderit.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, distinctio!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laudantium accusamus maxime veritatis corrupti, ipsum iusto nam consectetur modi quaerat.</p>
             </div>
 
-            <div class="col-lg-4 col-md-12 bg-white p-4 mt-3 mt-lg-0">
+            <div class="col-lg-4 col-md-12 bg-white p-3 ">
                 <i class="fa-solid fa-users rounded-circle bg-dark d-flex align-items-center justify-content-center  fa-3x mx-auto text-white mb-3"
                     style="width: 180px; height:180px;"></i>
                 <h2 class="text-center">Profesionales</h2>
-                <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde,
-                    provident tempore maiores dicta aspernatur asperiores voluptatum! Dicta, impedit? Explicabo amet
-                    quae quos at omnis?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, fuga.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim ad quidem. Blanditiis ex at labore est magni dicta quae?</p>
             </div>
 
-            <div class="col-lg-4 col-md-12 bg-white p-4 mt-3 mb-3 mb-lg-0 mt-lg-0">
-                <i class="fa-solid fa-phone-flip rounded-circle bg-dark d-flex align-items-center justify-content-center fa-3x mx-auto text-white"
+            <div class="col-lg-4 col-md-12 bg-white p-3 ">
+                <i class="fa-solid fa-phone-flip rounded-circle bg-dark d-flex align-items-center justify-content-center fa-3x mx-auto text-white mb-3"
                     style="width: 180px; height:180px;"></i>
                 <h2 class="text-center">Soporte Técnico</h2>
-                <p style="text-align: justify;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-                    asperiores corrupti fugiat consectetur numquam itaque obcaecati voluptatibus, unde repellat
-                    repudiandae.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, aliquam!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, eligendi vero? Maiores dolor odio rerum illum enim veritatis ut sint.</p>
             </div>
-        </section>
+        </section>  
 
     </div>
 
     <!-- Footer -->
     <footer class="py-3 mt-4 bg-dark">
-        <ul class="nav justify-content-around border-bottom pb-3 mb-3 text-light m-3">
+        <ul class="nav justify-content-around border-bottom pb-4 mb-3 text-light m-3">
             <li class="nav-item"><i class="fa-solid fa-envelope"></i> info@electricshop.com</li>
             <li class="nav-item"><i class="fa-solid fa-phone"></i> +123 456 789</li>
             <li class="nav-item"><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</li>
-            <li class="nav-item"> <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
+            <li class="nav-item"> 
+                <a href="https://www.facebook.com/?locale=es_ES"><i class="fa-brands fa-facebook text-light"></i></a>
+                <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter text-light"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram text-light"></i></a>
             </li>
         </ul>
         <p class="text-center text-muted">2024 - Todos los derechos reservados - <i
